# Facedetection

./: CMakeLists.txt  Q1.cpp  Q2.cpp
